fix: remove partial dark mode

--- a/src-vue/main.css
+++ b/src-vue/main.css
@@ -99,17 +99,6 @@ a:hover {
   color: #535bf2;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
-
-  a:hover {
-    color: #24c8db;
-  }
-}
-
 body.isDraggingIncrease {
   cursor: n-resize !important;
   div,
